# hydra-control-plane

./: .gitignore  Cargo.toml  ChangeLog.md  Dockerfile  README.md  Rocket.toml  api.yaml  example-k8s-resource.yaml  flake.nix  rust-toolchain.toml  rustc-ice-2024-06-30T02_53_43-3203314.txt
.github/iac/: main.tf
.github/images/hcp/: Dockerfile
.github/images/head/: Dockerfile
.github/images/init/: Dockerfile  dockerfile.init  entrypoint.sh
.github/images/operator/: Dockerfile
.github/images/rpc/: dockerfile.hydra
.github/workflows/: build.yml  clippy.yml  cluster.yml  deploy.yml  docker.yml  global.yml  hydra-control-plane.yml  init.yml  open-head.yml
bootstrap/global/: README.md  discord-bot.tf  grafana.tf  main.tf  thanos.tf
bootstrap/stage0/: README.md  albc.tf  cluster.yml
bootstrap/stage1/: crd.tf  ingress_controller.tf  ingress_controller_values.yml.tftpl  main.tf  metrics_server.tf  node.tf
bootstrap/stage1/o11y/requirements/: operator.tf  rbac.tf
bootstrap/stage1/o11y/resources/: alertmanager.tf  grafana.tf  kube-state.tf  kubelet.tf  prometheus.tf  thanos.tf  variables.tf
bootstrap/stage2/: config.tf  control-plane.tf  deployment.tf  frontend.tf  ingress.tf  main.tf  monitoring.tf  nginx.conf  node.tf  node_readiness.sh  proxy.tf  rbac.tf  secret.tf
crates/operator/: Cargo.toml  example-k8s-resource.yaml
crates/operator/src/: config.rs  controller.rs  custom_resource.rs  lib.rs
crates/proxy/: .env  Cargo.toml
crates/proxy/src/: config.rs  main.rs  proxy.rs  utils.rs  watcher.rs
crates/rpc/: Cargo.toml  Rocket.toml
crates/rpc/src/: lib.rs  main.rs
crates/rpc/src/model/: tx_builder.rs
crates/rpc/src/model/cluster/: crd.rs  mod.rs  node.rs
crates/rpc/src/model/cluster/shared/: mod.rs
crates/rpc/src/model/game/: player.rs
crates/rpc/src/model/game/contract/: _referee.cbor  game_state.rs  mod.rs  redeemer.rs  validator.rs
crates/rpc/src/model/hydra/: hydra_message.rs  hydra_socket.rs  mod.rs  utxo.rs
crates/rpc/src/model/hydra/contract/: _mhead.cbor  _vcommit.cbor  _vdeposit.cbor  _vhead.cbor  _vinitial.cbor  head_tokens.rs  hydra_validator.rs
crates/rpc/src/model/hydra/messages/: committed.rs  greetings.rs  head_is_initializing.rs  init.rs  invalid_input.rs  mod.rs  new_tx.rs  peer_connected.rs  peer_disconnected.rs  snapshot_confirmed.rs  tx_valid.rs
crates/rpc/src/model/hydra/tx/: commit.rs  cost_models.rs  init.rs  input.rs  mod.rs  output.rs  script_registry.rs
crates/rpc/src/providers/: blockfrost.rs
crates/rpc/src/routes/: add_player.rs  cleanup.rs  end_game.rs  head.rs  health.rs  mod.rs  new_game.rs  sample_transactions.rs  start_game.rs  stats.rs
docker/: Dockerfile
playbook/: .gitignore  pod.yml
playbook/cluster-setup/: backend.af-south-1.conf  backend.ap-southeast-1.conf  backend.eu-central-1.conf  backend.sa-east-1.conf  backend.us-east-1.conf  backend.us-west-2.conf  main.tf
playbook/doom-dev/: backend.af-south-1.conf  backend.ap-southeast-1.conf  backend.eu-central-1.conf  backend.sa-east-1.conf  backend.us-east-1.conf  main.tf
playbook/eu-central-1/cluster-setup/: main.tf
playbook/eu-central-1/doom-dev/: main.tf
playbook/global/: main.tf
playbook/infra-dev/: main.tf  protocol-parameters.json
playbook/main/: main.tf
playbook/open-head/: dispatch.sh  job.yml  open-head.sh  pvc.yml  script.yml
playbook/publish-scripts/: job.yml  publish-scripts.sh
playbook/snapshot/: job.yml
playbook/us-east-1/cluster-setup/: main.tf
playbook/us-east-1/doom-dev/: main.tf
scripts/: README.md  crd.sh  prepare_online_node.sh
src/: lib.rs  main.rs
src/model/: game_state.rs  hydra_message.rs  hydra_socket.rs  mod.rs  node.rs  player.rs  tag.rs  tx_builder.rs
src/model/cluster/: crd.rs  metrics.rs  mod.rs  node.rs
src/model/datums/: game_state.rs
src/model/game/: mod.rs  player.rs
src/model/game/contract/: _referee.cbor  game_state.rs  redeemer.rs  validator.rs
src/model/hydra/: hydra_message.rs  hydra_socket.rs  mod.rs  state.rs  utxo.rs
src/model/hydra/contract/: _mhead.cbor  _vcommit.cbor  _vdeposit.cbor  _vhead.cbor  _vinitial.cbor  head_tokens.rs  hydra_validator.rs  mod.rs
src/model/hydra/messages/: command_failed.rs  committed.rs  greetings.rs  head_is_initializing.rs  head_is_open.rs  init.rs  mod.rs  new_tx.rs  peer_connected.rs  peer_disconnected.rs  snapshot_confirmed.rs  tx_valid.rs
src/model/hydra/tx/: commit.rs  cost_models.rs  head_parameters.rs  init.rs  input.rs  mod.rs  output.rs  script_registry.rs
src/providers/: blockfrost.rs
src/routes/: add_player.rs  cleanup.rs  get_node.rs  global.rs  head.rs  heads.rs  mod.rs  new_game.rs
