[package]
name = "hydra_control_plane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.26.1", features = ["tokio-runtime"] }
futures-util = "0.3.30"
hex = "0.4.3"
pallas = "0.27.0"
reqwest = { version = "0.12.5", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
