[package]
name = "hydra_control_plane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-tungstenite = { version = "0.26.1", features = ["tokio-native-tls"] }
chrono = "0.4.38"
derivative = "2.2.0"
futures-util = "0.3.30"
hex = "0.4.3"
itertools = "0.13.0"
pallas = { git = "https://github.com/txpipe/pallas.git" }
reqwest = { version = "0.12.5", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.203", features = ["rc"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tracing = "0.1.40"

[profile.release]
debug = true
