[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
dotenv = "0.15.0"
futures-channel = "0.3.30"
futures-util = "0.3.30"
http-body-util = "0.1.0"
hydra-control-plane-operator = { path = "../operator" }
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
kube = { version = "0.96.0", features = ["client", "runtime", "derive"] }
leaky-bucket = "1.0.1"
notify = "6.1.1"
prometheus = "0.13.3"
regex = "1.10.3"
rustls = "0.22.2"
rustls-pemfile = "2.1.0"
rustls-pki-types = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = "0.25.0"
tokio-tungstenite = "0.21.0"
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
