[package]
name = "hydra-control-plane-rpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "open-head"
path = "src/bin/open_head.rs"

[[bin]]
name = "metrics-exporter"
path = "src/bin/metric_exporter/main.rs"

[[bin]]
name = "rpc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
async-tungstenite = { version = "0.26.1", features = ["tokio-native-tls"] }
blockfrost = "1.0.3"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
derivative = "2.2.0"
futures-util = "0.3.30"
hex = "0.4.3"
itertools = "0.13.0"
pallas = { git = "https://github.com/txpipe/pallas.git" }
prometheus = "0.13.4"
reqwest = { version = "0.12.5", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.203", features = ["rc"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uplc = "1.1.4"

# k8s stuff
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = { version = "0.96.0", features = ["client", "derive", "runtime"] }
schemars = "0.8.21"
rocket-errors = "0.1.0"
